# Discord-Embed-Generator

./: main.py  package-lock.json  pyproject.toml  test.py  thing.js
public/: index.html  script.js  style.css
